--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "test": "jest",
     "lint": "eslint src/**/*.ts",
     "format": "prettier --write src/**/*.ts",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "keywords": [
     "cli",
@@ -26,31 +29,32 @@
   "author": "Vibe Team",
   "license": "MIT",
   "dependencies": {
-    "commander": "^11.1.0",
-    "inquirer": "^9.2.12",
+    "axios": "^1.6.0",
     "chalk": "^5.3.0",
-    "ora": "^7.0.1",
+    "commander": "^11.1.0",
     "fs-extra": "^11.1.1",
     "handlebars": "^4.7.8",
+    "inquirer": "^9.2.12",
+    "ora": "^7.0.1",
     "semver": "^7.5.4",
-    "axios": "^1.6.0",
     "yaml": "^2.3.4"
   },
   "devDependencies": {
-    "@types/node": "^20.8.0",
-    "@types/inquirer": "^9.0.7",
     "@types/fs-extra": "^11.0.4",
-    "@types/semver": "^7.5.4",
-    "typescript": "^5.2.2",
-    "ts-node": "^10.9.1",
-    "jest": "^29.7.0",
+    "@types/inquirer": "^9.0.7",
     "@types/jest": "^29.5.6",
-    "eslint": "^8.51.0",
+    "@types/node": "^20.8.0",
+    "@types/semver": "^7.5.4",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
-    "prettier": "^3.0.3"
+    "eslint": "^8.51.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.0.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2",
+    "vitepress": "^1.6.3"
   },
   "engines": {
     "node": ">=16.0.0"
   }
-} 
+}
