--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "npm -w package run build && npm -w homepage run build",
     "build:cli": "npm -w package run build",
     "build:site": "npm -w homepage run build",
-    "publish": "bash ./scripts/publish.sh patch"
+    "publish": "bash ./scripts/publish.sh patch",
+    "local": "bash ./scripts/publish_local.sh"
   },
   "engines": {
     "node": ">=18.18.0"
