--- a/package/package.json
+++ b/package/package.json
@@ -110,6 +110,7 @@
     "react-markdown": "^10.1.0",
     "react-qr-code": "^2.0.18",
     "recharts": "^2.10.3",
+    "shiki": "^3.18.0",
     "sonner": "^1.3.1",
     "streamdown": "^1.4.0",
     "tailwind-merge": "^2.2.0",
