--- a/package/package.json
+++ b/package/package.json
@@ -38,6 +38,7 @@
     "@ai-sdk/openai-compatible": "^1.0.25",
     "@ai-sdk/react": "^2.0.56",
     "@ai-sdk/xai": "^2.0.27",
+    "@aws-sdk/client-s3": "^3.940.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@electron-toolkit/preload": "^3.0.2",
@@ -86,6 +87,7 @@
     "@tiptap/suggestion": "^3.10.1",
     "@types/uuid": "^10.0.0",
     "ai": "^5.0.80",
+    "ali-oss": "^6.23.0",
     "axios": "^1.6.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
