--- a/package/tsconfig.node.json
+++ b/package/tsconfig.node.json
@@ -10,6 +10,7 @@
   ],
   "compilerOptions": {
     "composite": true,
+    "resolveJsonModule": true,
     "types": [
       "electron-vite/node"
     ],
