--- a/package/package.json
+++ b/package/package.json
@@ -34,6 +34,7 @@
     "@302ai/ai-sdk": "^0.2.6",
     "@ai-sdk/deepseek": "^1.0.23",
     "@ai-sdk/google": "^2.0.23",
+    "@ai-sdk/mcp": "^0.0.11",
     "@ai-sdk/openai": "^2.0.52",
     "@ai-sdk/openai-compatible": "^1.0.25",
     "@ai-sdk/react": "^2.0.56",
@@ -46,6 +47,7 @@
     "@hookform/resolvers": "^5.2.2",
     "@iarna/toml": "^2.2.5",
     "@libsql/client": "^0.15.0",
+    "@modelcontextprotocol/sdk": "^1.24.3",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
