--- a/package/package.json
+++ b/package/package.json
@@ -80,6 +80,10 @@
     "@tiptap/extension-link": "^3.10.1",
     "@tiptap/extension-mention": "^3.10.1",
     "@tiptap/extension-placeholder": "^3.10.1",
+    "@tiptap/extension-table": "^3.13.0",
+    "@tiptap/extension-table-cell": "^3.13.0",
+    "@tiptap/extension-table-header": "^3.13.0",
+    "@tiptap/extension-table-row": "^3.13.0",
     "@tiptap/extension-task-item": "^3.10.1",
     "@tiptap/extension-task-list": "^3.10.1",
     "@tiptap/extension-underline": "^3.10.1",
