--- a/homepage/package.json
+++ b/homepage/package.json
@@ -17,8 +17,6 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.2.1",
-    "@libsql/client": "^0.15.15",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -47,26 +45,19 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-router/node": "^7.10.1",
     "@react-router/serve": "^7.10.1",
-    "@stripe/react-stripe-js": "^4.0.2",
-    "@stripe/stripe-js": "^7.9.0",
-    "@supabase/supabase-js": "^2.57.4",
-    "@tabler/icons-react": "^3.34.1",
-    "@types/mdx": "^2.0.13",
-    "axios": "^1.12.0",
     "better-auth": "^1.3.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "date-fns": "^4.1.0",
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.12",
-    "fumadocs-core": "^15.7.11",
-    "fumadocs-mdx": "^11.9.1",
-    "fumadocs-ui": "^15.7.11",
+    "fumadocs-core": "^16.2.3",
+    "fumadocs-mdx": "^14.1.0",
+    "fumadocs-ui": "^16.2.3",
     "input-otp": "^1.4.2",
-    "isbot": "^5.1.31",
+    "isbot": "^5",
     "lucide-react": "^0.543.0",
     "postgres": "^3.4.7",
     "react": "^19.2.1",
@@ -76,12 +67,13 @@
     "react-resizable-panels": "^3.0.5",
     "react-router": "^7.10.1",
     "recharts": "^2.15.4",
+    "rehype-katex": "^7.0.1",
+    "remark-directive": "^4.0.0",
+    "remark-math": "^6.0.0",
     "sonner": "^2.0.7",
     "stripe": "^18.5.0",
     "tailwind-merge": "^3.3.1",
-    "vaul": "^1.1.2",
-    "zod": "^4.1.7",
-    "zustand": "^5.0.8"
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@react-router/dev": "^7.10.1",
@@ -91,7 +83,6 @@
     "@types/react-dom": "^19",
     "drizzle-kit": "^0.31.4",
     "eslint": "^8",
-    "supabase": "^2.40.7",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5.9.2",
