--- a/package/package.json
+++ b/package/package.json
@@ -98,6 +98,7 @@
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "cookie-parser": "^1.4.6",
+    "date-fns": "^4.1.0",
     "diff": "^8.0.2",
     "drizzle-orm": "^0.44.6",
     "echo-state": "^1.3.0",
